--- a/index.html
+++ b/index.html
@@ -63,27 +63,14 @@
     </header>
 
     <nav>
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="about.html">About Me</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello! I'm Joe, a software engineer with a passion for developing web applications. I specialize in full-stack development and have experience working with NodeJS, React, and SQL.</p>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Dog Grooming Appointment App:</strong> A full-stack application using NodeJS, React, and SQL, hosted on AWS.</li>
-            <li><strong>Algorithm Tutorial App:</strong> A web-based application that teaches runtime and algorithms to high school students.</li>
-        </ul>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:joe@example.com">joe@example.com</a>.</p>
+    <section id="home">
+        <h2>Welcome</h2>
+        <p>This is the homepage of my portfolio. Navigate using the links above to learn more about me, see my projects, and get in touch.</p>
     </section>
 
     <footer>
