--- a/about.html
+++ b/about.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact Joe">
-    <title>Contact Joe</title>
+    <meta name="description" content="About Joe">
+    <title>About Joe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
-        <h1>Contact</h1>
+        <h1>About Me</h1>
     </header>
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
         <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:joe@example.com">joe@example.com</a>.</p>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I'm Joe, a software engineer with a passion for developing web applications. I specialize in full-stack development and have experience working with NodeJS, React, and SQL.</p>
     </section>
 
     <footer>
