--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><strong>Dog Grooming Appointment App:</strong> A full-stack application using NodeJS, React, and SQL, hosted on AWS.</li>
+            <li><strong>Dog Grooming Appointment App:</strong> A full-stack application using NodeJS, Express.js, Javascript, EJS, HTML, and MySQL.</li>
             <li><strong>Algorithm Tutorial App:</strong> A web-based application that teaches runtime and algorithms to high school students.</li>
         </ul>
     </section>
