--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <section id="home">
         <h2>Welcome</h2>
+        <p>New website I made recently, still a work in progress.</p>
         <p>This is the homepage of my portfolio. Navigate using the links above to learn more about me, see my projects, and get in touch.</p>
     </section>
 
