--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,12 @@
         <ul>
             <li><strong>Dog Grooming Appointment App:</strong> A full-stack application using NodeJS, Express.js, Javascript, EJS, HTML, and MySQL.</li>
         </ul>
+          <!-- Video Demo Section -->
+        <h3>Project Demo</h3>
+        <video width="640" height="360" controls>
+            <source src="path/to/your-video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </section>
 
     <footer>
