--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
           <!-- Video Demo Section -->
         <h3>Project Demo</h3>
         <video width="640" height="360" controls>
-            <source src="videos/WebAppDemo.mp4" type="video/mp4">
+            <source src="https://github.com/joe-project-designer/joe-project-designer.github.io/videos/WebAppDemo.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
