--- a/projects.html
+++ b/projects.html
@@ -26,10 +26,9 @@
         </ul>
           <!-- Video Demo Section -->
         <h3>Project Demo</h3>
-        <video width="640" height="360" controls>
-            <source src="https://joe-project-designer.github.io/videos/WebAppDemo.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <div style="position: relative; padding-bottom: 42.91666666666667%; height: 0;">
+            <iframe src="https://www.loom.com/embed/795da19bbd184055b709b93ac8cd85ba?sid=79ab206b-fa19-4f55-9d3c-42a8a3e12291" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+        </div>
     </section>
 
     <footer>
