--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm Joe, a software engineer with a passion for developing web applications. I specialize in full-stack development and have experience working with NodeJS, React, and SQL.</p>
+        <p>Hello! I'm Joe, a software engineer with a passion for developing web applications. I specialize in full-stack development and have experience working with NodeJS, CSS, and SQL.</p>
     </section>
 
     <footer>
