--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:JosephAWilliams12@gmail.com">JosephAWilliams12@gmail.com</a>.</p>
+        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:joewilliams.dev@yahoo.com">joewilliams.dev@yahoo.com</a>.</p>
     </section>
 
     <footer>
